# ZZ-AI-Business-Analysis

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  VERSIONING.md  知识库架构图.drawio
.agent-locks/: .gitkeep  README.md  claude-arch-1783051048.yml  claude-ci-code-reviewer-1782817043.yml  claude-demo-1782656051.yml  claude-kb-feishu-1782806877.yml  claude-review-gate-1782800310.yml  claude-router-1782656987.yml  claude-transfer-1782805920.yml  claude-wiki-seed-sync-1782699749.yml  claude-wire-review-1782813189.yml  codex-1783326274.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
SQL/: AI小万_机型漏斗数据周日均.sql
docs/: AI小万_v1.5.5_zloop迁移计划.md  AI小万_v1.5.5_分析校验契约.md  AI小万_v1.5.5_四阶段产物契约.md  AI小万_v1.5.5_实施拆分与验收清单.md  AI小万_v1.5.5_数据处理契约.md  AI小万_v1.5.5_知识库与机型分层迁移盘点.md  AI小万_v1.5.5_飞书AI摘要卡片方案.md  AI小万_v1.6.2_服务器消费桥接交接文档_20260716.md  AI小万_v1.6.49_zloop真实Loop运行问题与优化台账.md  AI小万_v1.7_skill差异项与调整记录_20260716.md
knowledge/: metrics_dictionary.md
mcp_servers/data_tools/: pyproject.toml
mcp_servers/data_tools/src/data_tools/: __init__.py  analysis.py  email_reader.py  server.py
mcp_servers/data_tools/tests/: test_email_reader.py
mcp_servers/knowledge_base/: pyproject.toml
mcp_servers/knowledge_base/src/knowledge_base/: __init__.py  server.py
mcp_servers/knowledge_base/tests/: test_server.py
model-tag-monitor/: .env.example  .gitignore  DEPLOY.md  HANDOFF.md  HANDOFF_v2.md  README.md  ecosystem.config.js  package-lock.json  package.json  start-dev.sh
orchestrator/: pyproject.toml
orchestrator/src/orchestrator/: __init__.py  __main__.py  event_handler.py  expert_runner.py  router.py  server.py
orchestrator/src/orchestrator/lib/monitor/: agent_hook.py  categories.py  cli.py  fetcher.py  pusher.py  rules.py  schemas.py  wave.py
orchestrator/src/orchestrator/lib/monitor/tests/: parity_check.py  test_e2e_mock.py  test_rules.py  test_wave.py
orchestrator/tests/: test_review_wire.py
principles/: core.md
review_gate/: README.md  pyproject.toml
review_gate/prompts/: critic_system.md
review_gate/src/review_gate/: __init__.py  __main__.py  critic.py  verdict.py
review_gate/tests/: test_critic.py  test_verdict.py
router/: README.md  pyproject.toml
router/src/router/: __init__.py  __main__.py  planner.py  skill_loader.py
router/tests/: test_skill_loader.py
scripts/: _wiki_seed_common.py  ci_code_review.py  import_weekly_base_partition_v1.py  run-ai-wan-v155-real-test.sh  setup.sh  test_pipeline.sh  verify_equivalence_real.py  wiki_seed_pull.py  wiki_seed_push.py  机型周数据_cron.sh
src/: compose-dashboard.js
test/: aggregate-anomaly.test.js  aggregate-board-penetration.test.js  week-utils.test.js  (+8 more)
(+311 files in other folders)
