[project]
name = "orchestrator"
version = "0.1.0"
description = "主 Agent: 路由 + 编排专家 + 整合输出"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "review-gate",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
review-gate = { path = "../review_gate", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
