[project]
name = "knowledge-base"
version = "0.1.0"
description = "MCP server: 知识库查询"
requires-python = ">=3.11"
dependencies = ["mcp>=1.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_base"]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
